# dev-review

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: deploy.yml
doc/: conf.py
docs/: 404.html  _index.md  conf.py  glossary.md  index.html  index.md  index.rst  index.xml  refs-related.md  sitemap.xml
docs/categories/: index.html  index.xml
docs/css/: style.min.css.map
docs/flowcharts/: high-level.md  index.html  index.xml
docs/flowcharts/high-level/: index.html
docs/flowcharts/lonecoder/: index.html
docs/glossary/: index.html
docs/guidelines/: approach.md  index.html  index.xml  points-to-check-for-reviewers.md
docs/guidelines/approach/: index.html
docs/guidelines/points-to-check-for-reviewers/: index.html
docs/lib/mermaid/: mermaid.min.css.map
docs/page/1/: index.html
docs/recipes/: explain_code_structure.md  find_a_reviewer.md  index.html  index.xml  lonecoder.md  meet_and_agree_on_objectives.md  perform_code_review.md  recipe_template.md
docs/recipes/explain_code_structure/: index.html
docs/recipes/find_a_reviewer/: index.html
docs/recipes/lonecoder/: index.html
docs/recipes/meet_and_agree_on_objectives/: index.html
docs/recipes/perform_code_review/: index.html
docs/recipes/recipe_template/: index.html
docs/recipes/review_meetings/: index.html
docs/refs-related/: index.html
docs/tags/: index.html  index.xml
outreach/CW2022/: CW2022_introduction.md
site/: config.toml
site/content/: _index.md  glossary.md  refs-related.md
src/dev_review/: __about__.py
(+12 files in other folders)
