[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dev_review"
description = "guide to code review during research"
version = "0.1.0"
authors = [{name = "Research Code Review Community", email = "fergus.cooper@cs.ox.ac.uk"}]
readme = "README.md"
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: Implementation :: CPython',
]

[project.optional-dependencies]
doc = [
    "myst-parser >=0.17.0",
    "Sphinx>=3.4.3",
    "sphinxext-opengraph  >=0.5.1",
    "sphinx-copybutton >=0.4.0",
    "sphinx-autobuild >= 2021.3.14",
    "sphinx-book-theme>=0.3.2",
]

[project.urls]
Home = "https://github.com/ResearchCodeReviewCommunity/dev-review"
